assets/v4.2.0/cluster-bootstrap/cluster-ingress-02-config.yaml
apiVersion: config.openshift.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: cluster
spec:
  domain: ${INGRESS_SUBDOMAIN}
status: {}
